# crest-synth

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  crest-spec.db-shm  crest-spec.db-wal
spec/: base.cue  crest-spec.ts  editor.cue  effects.cue  kernel.cue  manifest.cue  midi.cue  modulation.cue  patch.cue  phase-1.cue  phase-1.override-BuildMakefile.cue  phase-1.override-RootCargoToml.cue  phase-1.override-ToneTestMain.cue  phase-10.cue  phase-11.cue  phase-11.override-BuildMakefile.cue  phase-11.override-RootCargoToml.cue  phase-2.cue  phase-2.override-BuildMakefile.cue  phase-2.override-RootCargoToml.cue  phase-3.cue  phase-3.override-BuildMakefile.cue  phase-3.override-RootCargoToml.cue  phase-3.override-ToneTestMain.cue  phase-4.cue  phase-4.override-BuildMakefile.cue  phase-4.override-RootCargoToml.cue  phase-5.cue  phase-5.override-BuildMakefile.cue  phase-5.override-RootCargoToml.cue  phase-6.cue  phase-6.override-BuildMakefile.cue  phase-6.override-RootCargoToml.cue  phase-7.cue  phase-7.override-BuildMakefile.cue  phase-7.override-RootCargoToml.cue  phase-8.cue  phase-8.override-BuildMakefile.cue  phase-8.override-RootCargoToml.cue  phase-9.cue  (+9 more)
src/: lib.rs  main.rs
src/adapter/: cpal_audio_output.rs  eframe_window.rs  egui_renderer.rs  fundsp_effects.rs  gilrs_gamepad.rs  midi2_normalizer.rs  midir_input.rs  mod.rs  nih_plug_host.rs  serde_preset_codec.rs
src/audio/: audio_renderer.rs  mod.rs  sine_voice.rs
src/editor/: editor_event.rs  editor_state.rs  mod.rs  param_field.rs
src/effects/: chorus_config.rs  delay_config.rs  mod.rs  (+8 more)
(+90 files in other folders)
