[package]
name = "crest-synth"
version = "0.1.0"
edition = "2021"
default-run = "crest-synth"

[lib]
path = "src/lib.rs"

[[bin]]
name = "crest-synth"
path = "src/main.rs"

[[bin]]
name = "midi_play"
path = "src/bin/midi_play.rs"

[[bin]]
name = "voice_demo"
path = "src/bin/voice_demo.rs"

[[bin]]
name = "midi_play_live"
path = "src/bin/midi_play_live.rs"

[[bin]]
name = "patch_play"
path = "src/bin/patch_play.rs"

[[bin]]
name = "mod_play"
path = "src/bin/mod_play.rs"

[[bin]]
name = "sample_demo"
path = "src/bin/sample_demo.rs"

[[bin]]
name = "effects_demo"
path = "src/bin/effects_demo.rs"

[[bin]]
name = "preset_demo"
path = "src/bin/preset_demo.rs"

[[bin]]
name = "gamepad_demo"
path = "src/bin/gamepad_demo.rs"

[[bin]]
name = "synth_ui"
path = "src/bin/synth_ui.rs"

[dependencies]
cpal = "0.15"
midir = "0.9"
midly = "0.5"
midi2 = "0.4"
rtrb = "0.3.4"
triple_buffer = "9.0.0"
basedrop = "0.1.3"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gilrs = "0.10"
eframe = "0.29"
egui = "0.29"
fundsp = "0.19"

[dev-dependencies]
tempfile = "3"
